@@ -1,6 +1,12 @@
 2020-06-05 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCC.y,
+	  support/valdiag/tests/bug-3011.c:
+	  Fix bug #3011.
+
+2020-06-05 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCC.y,
 	  support/valdiag/tests/bug-3014.c:
 	  Fix bug #3014.
 
